--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
 @import "tailwindcss";
 
 @font-face {
-  font-family: "pricedown";
-  src: url("./pricedown.otf");
+  /* font-family: "pricedown";
+  src: url("./pricedown.otf"); */
+    font-family: "pricedown";
+  src: url("/fonts/pricedown.otf") format("opentype");
 }
 
 html,
