--- a/src/index.css
+++ b/src/index.css
@@ -145,3 +145,9 @@ button {
     @apply bg-background text-foreground;
   }
 }
+
+.heading-shadow {
+  /* text-shadow:3px 3px 0 #ff007f, 6px 6px 0 #00ffff; */
+  text-shadow: 4px  4px 0 #999,
+    2px 2px 0 #fdfdfd;
+}
