gradient footer added, timeline hover animatn

--- a/src/index.css
+++ b/src/index.css
@@ -175,3 +175,28 @@ button {
     transform: translateZ(0) rotate(360deg);
     }
   }
+
+@keyframes glitch {
+  0% {
+    transform: translate(0);
+  }
+  20% {
+    transform: translate(-1px, 1px);
+  }
+  40% {
+    transform: translate(2px, -2px);
+  }
+  60% {
+    transform: translate(-1px, 1px);
+  }
+  80% {
+    transform: translate(1px, -1px);
+  }
+  100% {
+    transform: translate(0);
+  }
+}
+
+  .meme-timeline-font {
+    font-family: "Nothing You Could Do", cursive;
+  }
